test/libsolidity/syntaxTests/duplicate_contract.sol
contract X {}
contract X {}
// ----
// DeclarationError 2333: (14-27): Identifier already declared.
